
	* MonoDevelop.Ide.CodeFormatting/CodeFormattingPolicyPanelWidget.cs:
	  Worked on formatting panel.

2009-06-16  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.CodeFormatting/CodeFormattingPolicyPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.CodeFormatting.CodeFormattingPolicyPanelWidget.cs:
	  Worked on code format panel.

2009-06-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Fixed "Bug 513383
	  - Going to declaration of extension method of
	  System.Drawing.Bitmap crashes MD badly".

2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/GacReferencePanel.cs: Fix hiding
	  of mscorlib assemblies.

2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Track assembly lookup APIs.

2009-06-01  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Ide.Commands\HelpCommands.cs:
	* MonoDevelop.Ide.Commands\ViewCommands.cs: rewritten from scratch to make it non-GPL.
	
2009-06-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs\FileSelectorDialog.cs: Fix gtk
	  warning.

	* MonoDevelop.Ide.Gui\DragNotebook.cs: For some reason
	  Pointer.IsGrabbed always returns false on windows.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Fix location of the formatting
	  policies panel in the policies dialog.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.Gui/ViewContentEventHandler.cs: Removed
	  unused file.

2009-06-09  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Ide.Commands\FileCommands.cs: Rewritten from scratch to make it non-GPL.

2009-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.CodeFormatting/CodeFormattingCommands.cs:
	* MonoDevelop.Ide.CodeFormatting/CodeFormattingPolicyPanelWidget.cs:
	  Add support for per-mimetype policies.
