@@ -31,6 +31,9 @@
 	* gtk-gui/MonoDevelop.Ide.CodeFormatting.CodeFormattingPolicyPanelWidget.cs:
 	  Worked on code format panel.
 
+2009-06-16  Viktoria Dudka  <viktoriad@remobjects.com>
+	* MonoDevelop.Ide.Commands\ToolsCommands.cs: Rewritten from scratch to make it non-GPL.
+
 2009-06-16  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Fixed "Bug 513383
